--- a/one-page.html
+++ b/one-page.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OnePage - FITCross</title>
+<title>Yvonne</title>
 
 <!-- Bootstrap CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
