add text to pic

--- a/one-page.html
+++ b/one-page.html
@@ -148,7 +148,7 @@
             <div class="menu_soc">
                 <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
-                
+
             </div>
             
             <div class="se_bl">
@@ -279,7 +279,7 @@
                 <div class="container">
                     <div class="class_txt">
                         <div class="class_txt_left">
-                            <h2>Greetings</h2>
+                            <h2>WELCOME</h2>
                              <div class="class_txt_item">
                                     <div class="col-md-4 text-right padding-top-100">
                                         <div class="schedule_title3">Greetings</div>
@@ -291,7 +291,15 @@
                                         <div class="coach_item">  
                                             <div class="coach_photo">
                                                 <div class="sq_imm sq_imm_border">
-                                                     <p>inside</p>
+                                                     <p>Hello, I'm Yvonne Johnson-Webb
+                                                        A Tech Guru, who enjoys capturing and designing digital art
+                                                        through programming, social media, and photography. 
+                                                        I'm also adventurous and curious about the world.
+                                                        On this page, you will get to see my perspective on life
+                                                        as I showcase my many talents. 
+                                                        You can follow me through my social media links below.
+                                                        Thanks,
+                                                        </p>
                                                 </div>
                                                 <div class="sq_imm">
                                                     <img src="http://res.cloudinary.com/lcxcy3pfc/image/upload/v1483070017/melion2_yzzrbm.jpg" alt="">
