--- a/one-page.html
+++ b/one-page.html
@@ -294,7 +294,7 @@
                                         <div class="coach_item">  
                                             <div class="coach_photo">
                                                 <div class="sq_imm sq_imm_border">
-                                                     <p>Hello, I'm Yvonne Johnson-Webb a novice entreprenuer
+                                                     <p>Hello, I'm Yvonne Johnson-Webb an entreprenuer
                                                         and software engineer. I enjoy capturing and designing digital art
                                                         through photography, social media, and programming. 
                                                         Join me on my adventurous career journey.
