changed to index page

--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
                                         <div class="coach_item">  
                                             <div class="coach_photo">
                                                 <div class="sq_imm sq_imm_border">
-                                                     <p>Hello, I'm Yvonne Johnson-Webb an entreprenuer
+                                                     <p>I'm Yvonne Johnson-Webb an entreprenuer
                                                         and software engineer. I enjoy capturing and designing digital art
                                                         through photography, social media, and programming. 
-                                                        Join me on my adventurous career journey.
+                                                        Join me on my adventurous journey.
                                                         You are welcome to follow me on social media.
                                                         Thanks 
                                                         </p>
