add social media buttons

--- a/index.html
+++ b/index.html
@@ -545,14 +545,14 @@
             </form>
          </div> -->
          <!-- Form End -->
-
         <p></p>
-            <a href="http://mildvision.com/">Visit The MILDVISION Team<a/><Br>
-            <a href="mailto:ymjwcoder16r@gmail.com"><i class="fa fa-paper-plane-o"></i></a> /
-            <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> /
+            
+            <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+            <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> / 
             <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a> / 
             <a href="https://www.twitter.com/YMJW39"><i class="fa fa-twitter"></i></a> /
             <a href="https://www.instagram.com/yjohnson41/?hl=en"><i class="fa fa-instagram"></i></a>
+            <br><a href="http://mildvision.com/">Visit The MILDVISION Team<a/><Br>
         <h2><class="thnks">THANKS FOR VISITING!</h2>
             <p>¡Hasta luego!<p/>
 
