add social media buttons top and edit greetings info

--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@
             </ul>
 
             <div class="menu_soc">
-                <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a> / 
-                <a href="https://www.twitter.com/YMJW39"><i class="fa fa-twitter"></i></a> /
-                <a href="https://www.instagram.com/yjohnson41/?hl=en"><i class="fa fa-instagram"></i></a>
+            <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-paper-plane-o" aria-hidden="true"></i><a/> /
+            <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> / 
+            <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a> / 
+            <a href="https://www.twitter.com/YMJW39"><i class="fa fa-twitter"></i></a> /
+            <a href="https://www.instagram.com/yjohnson41/?hl=en"><i class="fa fa-instagram"></i></a>
             </div>
             
             <div class="se_bl">
@@ -297,8 +299,7 @@
                                                      <p>I'm Yvonne Johnson-Webb an entreprenuer
                                                         and software engineer. I enjoy capturing and designing digital art
                                                         through photography, social media, and programming. 
-                                                        Join me on my adventurous journey.
-                                                        You are welcome to follow me on social media.
+                                                        Contact me about IT services and join me on my adventurous journey.
                                                         Thanks 
                                                         </p>
                                                 </div>
