changed gallery comments

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <a class="lightbox" href="http://res.cloudinary.com/lcxcy3pfc/image/upload/v1482984020/ace_tbrbqm.jpg">
                     <span>
                         <i class="gallery_wr">
-                            <b></b>
+                            <p>Photograph exotic locations</p>
                              
                             <i class="fa fa-search">
                                 <svg class="sq_grey">
@@ -373,7 +373,7 @@
                 <a href="https://res.cloudinary.com/lcxcy3pfc/image/upload/v1482984015/20151224_133813b_rfskgg.jpg" class="lightbox">
                     <span>
                         <i class="gallery_wr">
-                            <b></b>
+                            <p>Explore and Enlighten</p>
                              
                             <i class="fa fa-search">
                                 <svg class="sq_grey">
@@ -393,7 +393,7 @@
                     <span>
                         <i class="gallery_wr">
                             <b> Mild Vision Solutions</b>
-                             <b> Tech Above and Beyond<b/>
+                             <p> Tech Above and Beyond</p>
                                 <i class="fa fa-search">
                                 <svg class="sq_grey">
                                     <use xlink:href="#sq"/>
