changed email icon

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
             </ul>
 
             <div class="menu_soc">
-            <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-paper-plane-o" aria-hidden="true"></i><a/> /
+            <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> /
+
             <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> / 
             <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a> / 
             <a href="https://www.twitter.com/YMJW39"><i class="fa fa-twitter"></i></a> /
@@ -548,7 +549,7 @@
          <!-- Form End -->
         <p></p>
             
-            <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> /
+            <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> /
             <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> / 
             <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a> / 
             <a href="https://www.twitter.com/YMJW39"><i class="fa fa-twitter"></i></a> /
