add greetings page background

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Yvonne Johnson Webb</title>
+<title>YJW Profile</title>
 
 <!-- Bootstrap CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -280,12 +280,13 @@
         <div class="Greetings_wrapper white_txt">
             
             <!-- Item -->
-            <div class="greetings_item parallax" data-image="http://res.cloudinary.com/lcxcy3pfc/image/upload/v1483168467/mainback_h2yesc.png">
+            <div class="greetings_item parallax" data-image="http://res.cloudinary.com/lcxcy3pfc/image/upload/v1483334203/hexagons_radial_grey_4k_by_scifinity-d84nsxt_lhiyap.jpg">
                 <div class="container">
                     <div class="class_txt">
                         <div class="class_txt_left">
                             <h1>Welcome </h1>
-                            <p>HOLA!</p>
+                                <p> ABOUT ME </p>
+                                <p>click pic </p>
                              <div class="class_txt_item">
                                     <div class="col-md-4 text-right padding-top-100">
                                         <div class="schedule_title3">こんにちは </div>
