add favicon changed bio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>YJW Profile</title>
+<title>Yvonne's Portfolio</title>
+
+<!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.png">
 
 <!-- Bootstrap CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -150,16 +153,16 @@
 
             <div class="menu_soc">
             <a href="mailto: ymjwcoder16@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a> /
-            <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> / 
-            <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a> / 
+            <a href="https://github.com/ymjw-mv"><i class="fa fa-github"></i></a> /
+            <a href="https://www.linkedin.com/in/yvonne-johnson-webb-571090100"><i class="fa fa-linkedin"></i></a><br>
             <a href="https://www.twitter.com/YMJW39"><i class="fa fa-twitter"></i></a> /
             <a href="https://www.instagram.com/yjohnson41/?hl=en"><i class="fa fa-instagram"></i></a>
             </div>
             
-            <div class="se_bl">
+            <!-- div class="se_bl">
                 <input type="text" class="form-control" placeholder="Enter Your Keywords">
                 <button class="search_link"><i class="fa fa-search"></i></button>
-            </div>         
+            </div>   -->       
     </div>
     <!-- Submenu End -->
 
@@ -284,9 +287,10 @@
                 <div class="container">
                     <div class="class_txt">
                         <div class="class_txt_left">
-                            <h1>Welcome </h1>
-                                <p> ABOUT ME </p>
+                            <h1>Salutations</h1>
+                                
                                 <p>click pic </p>
+                                <b>About Me</b>
                              <div class="class_txt_item">
                                     <div class="col-md-4 text-right padding-top-100">
                                         <div class="schedule_title3">こんにちは </div>
@@ -298,12 +302,10 @@
                                         <div class="coach_item">  
                                             <div class="coach_photo">
                                                 <div class="sq_imm sq_imm_border">
-                                                     <p>I'm Yvonne Johnson-Webb an entreprenuer
-                                                        and software engineer. I enjoy capturing and designing digital art
-                                                        through photography, social media, and programming. 
-                                                        Contact me about IT services and join me on my adventurous journey.
-                                                        Thanks 
-                                                        </p>
+                                                     <p>I'm Yvonne Johnson-Webb, an entreprenuer and software engineer.
+                                                      I enjoy capturing and designing digital art through photography, social media, and programming. 
+                                                        You contact me about IT services or follow my adventures on social media. 
+                                                       </p>
                                                 </div>
                                                 <div class="sq_imm">
                                                     <img src="http://res.cloudinary.com/lcxcy3pfc/image/upload/v1483070017/melion2_yzzrbm.jpg" alt="">
