--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                                 <div class="sq_imm sq_imm_border">
                                                      <p>I'm Yvonne Johnson-Webb, an entreprenuer and software engineer.
                                                       I enjoy capturing and designing digital art through photography, social media, and programming. 
-                                                        You contact me about IT services or follow my adventures on social media. 
+                                                        You can Contact me about IT services or follow my adventures on social media. 
                                                        </p>
                                                 </div>
                                                 <div class="sq_imm">
