changed about me statement attempt css chng 6 to 10s then back

--- a/index.html
+++ b/index.html
@@ -302,9 +302,8 @@
                                         <div class="coach_item">  
                                             <div class="coach_photo">
                                                 <div class="sq_imm sq_imm_border">
-                                                     <p>I'm Yvonne Johnson-Webb, an entreprenuer and software engineer.
-                                                      I enjoy capturing and designing digital art through photography, social media, and programming. 
-                                                        You can Contact me about IT services or follow my adventures on social media. 
+                                                     <p>Hello, I"m Yvonne Johnson- Webb, an entrepreneur and software engineer. I spend my time photographing, designing and displaying digital art through websites and social media. Feel free to contact me about web design and IT services and follow my adventures through the links below. 
+
                                                        </p>
                                                 </div>
                                                 <div class="sq_imm">
